--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,7 +55,8 @@ a {
   text-decoration: none;
 }
 
-/* Font size of paragraph tags*/
+/* Font size of figcaption and paragraph tags*/
+figcaption,
 p {
   font-size: 16px;
 }
